fixed slider not centered on mobile

--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -177,11 +177,8 @@ header {
 }
 
 .swiper-pagination {
-  position: relative;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
+  margin: auto;
+  width: 100%;
 }
 
 .swiper-pagination-bullet {
